deployment_pod/deployment_pod_base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-application-pod
  namespace: gbp-pod-tenant-namespace
  labels:
    app: core-application-pod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: core-application-pod
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: core-application-pod
    spec:
      containers:
        - name: core-application
          image: public.ecr.aws/norse/gbp-core-api:1.4.6
          ports:
            - containerPort: 8080
