deployment_pod/service_pod_ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: fp-application-pod
  namespace: gbp-pod-tenant-namespace
spec:
  selector:
    app: fp-application-pod
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
