deployment_pod/Ingress_POD.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gbp-pod-api-ingress
  namespace: gbp-pod-tenant-namespace
  annotations:
    #Share a single ALB with all Ingress rules with a specific group name
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-03f0f730bdfe4e2e9,subnet-03eba66569352f19e
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-application-pod
                port:
                  number: 80
